modified:   Labyrinth-app/src/main/java/Labyrinth/App.java modified:   Labyrinth-app/src/main/java/Labyrinth/Plane.java modified:   Labyrinth-app/src/main/java/Labyrinth/Player.java modified:   Labyrinth-app/src/main/java/Labyrinth/controller/Session.java modified:   Labyrinth-app/src/main/java/Labyrinth/controller/TelegramBot.java